--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   },
   "scripts": {
     "start": "vitepress dev docs --host",
+    "build": "vitepress build docs",
     "docs:dev": "vitepress dev docs",
     "docs:build": "vitepress build docs",
     "docs:preview": "vitepress preview docs"
