--- a/.github/workflows/cloud.yml
+++ b/.github/workflows/cloud.yml
@@ -1,66 +1,66 @@
-# This is a basic workflow to help you get started with Actions
-name: CI
-# Controls when the action will run. Triggers the workflow on push or pull request
-# events but only for the master branch
-on:
-  push:
-    branches: [ main ]
-env:
-  CI: true
-  NODE: 18.x
-
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
-jobs:
-  # This workflow contains a single job called "build"
-  build:
-    # The type of runner that the job will run on
-    runs-on: ubuntu-latest
-    # Steps represent a sequence of tasks that will be executed as part of the job
-    steps:
-    # calculate some variables that are used later
-    # TAGS="latest,$(date +'%Y%m%d')"
-    # TAGS="${TAGS},${BRANCH}-${{ github.run_number }},${GITHUB_SHA:0:7}"
-    - name: setup github branch
-      run: |
-        BRANCH=${GITHUB_REF##*/}
-        if [ "$BRANCH" == "main" ]; then
-          TAGS="latest"
-        else
-          TAGS="$BRANCH"
-        fi
-        TAGS="${TAGS},${BRANCH}-${{ github.run_number }},${GITHUB_SHA:0:7}"
-        echo "TAGS=${TAGS}" >> $GITHUB_ENV
-        echo "GITHUB_BRANCH=${BRANCH}" >> $GITHUB_ENV
-
-    - uses: actions/checkout@v3
-    - name: Install Node.js
-      uses: actions/setup-node@v3
-      with:
-        node-version: "${{ env.NODE }}"
-        cache: 'yarn'
-    - name: Install Node dependencies
-      run: yarn install
-    - name: Run build task
-      run: yarn build
-    - name: Deploy to Server Cloud 2
-      uses: easingthemes/ssh-deploy@v2
-      env:
-        SSH_PRIVATE_KEY: ${{ secrets.PRIVATE_KEY2 }}
-        ARGS: "-rltgoDzvO --delete"
-        SOURCE: "docs/.vitepress/dist/"
-        REMOTE_PORT : ${{ secrets.PORT2 }}
-        REMOTE_HOST: ${{ secrets.HOST2 }}
-        REMOTE_USER: ${{ secrets.USERNAME }}
-        TARGET: "/home/ubuntu/blog"
-
-      # Slack Notification
-    - name: Slack Notification
-      uses: 8398a7/action-slack@v3
-      with:
-        status: ${{ job.status }}
-        fields: repo,message,commit,author,action,eventName,ref,workflow,job,took # selectable (default: repo,message)
-      env:
-        # GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # optional
-        # 获取频道地址 https://api.slack.com/apps/AA2A5EYBE/incoming-webhooks
-        SLACK_WEBHOOK_URL: ${{secrets.SLACK_WEBHOOK_URL}} # required
-      if: always() # Pick up events even if the job fails or is canceled.
+## This is a basic workflow to help you get started with Actions
+#name: CI
+## Controls when the action will run. Triggers the workflow on push or pull request
+## events but only for the master branch
+#on:
+#  push:
+#    branches: [ main ]
+#env:
+#  CI: true
+#  NODE: 18.x
+#
+## A workflow run is made up of one or more jobs that can run sequentially or in parallel
+#jobs:
+#  # This workflow contains a single job called "build"
+#  build:
+#    # The type of runner that the job will run on
+#    runs-on: ubuntu-latest
+#    # Steps represent a sequence of tasks that will be executed as part of the job
+#    steps:
+#    # calculate some variables that are used later
+#    # TAGS="latest,$(date +'%Y%m%d')"
+#    # TAGS="${TAGS},${BRANCH}-${{ github.run_number }},${GITHUB_SHA:0:7}"
+#    - name: setup github branch
+#      run: |
+#        BRANCH=${GITHUB_REF##*/}
+#        if [ "$BRANCH" == "main" ]; then
+#          TAGS="latest"
+#        else
+#          TAGS="$BRANCH"
+#        fi
+#        TAGS="${TAGS},${BRANCH}-${{ github.run_number }},${GITHUB_SHA:0:7}"
+#        echo "TAGS=${TAGS}" >> $GITHUB_ENV
+#        echo "GITHUB_BRANCH=${BRANCH}" >> $GITHUB_ENV
+#
+#    - uses: actions/checkout@v3
+#    - name: Install Node.js
+#      uses: actions/setup-node@v3
+#      with:
+#        node-version: "${{ env.NODE }}"
+#        cache: 'yarn'
+#    - name: Install Node dependencies
+#      run: yarn install
+#    - name: Run build task
+#      run: yarn build
+#    - name: Deploy to Server Cloud 2
+#      uses: easingthemes/ssh-deploy@v2
+#      env:
+#        SSH_PRIVATE_KEY: ${{ secrets.PRIVATE_KEY2 }}
+#        ARGS: "-rltgoDzvO --delete"
+#        SOURCE: "docs/.vitepress/dist/"
+#        REMOTE_PORT : ${{ secrets.PORT2 }}
+#        REMOTE_HOST: ${{ secrets.HOST2 }}
+#        REMOTE_USER: ${{ secrets.USERNAME }}
+#        TARGET: "/home/ubuntu/blog"
+#
+#      # Slack Notification
+#    - name: Slack Notification
+#      uses: 8398a7/action-slack@v3
+#      with:
+#        status: ${{ job.status }}
+#        fields: repo,message,commit,author,action,eventName,ref,workflow,job,took # selectable (default: repo,message)
+#      env:
+#        # GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # optional
+#        # 获取频道地址 https://api.slack.com/apps/AA2A5EYBE/incoming-webhooks
+#        SLACK_WEBHOOK_URL: ${{secrets.SLACK_WEBHOOK_URL}} # required
+#      if: always() # Pick up events even if the job fails or is canceled.
